@@ -10,20 +10,38 @@ Build-Depends: debhelper (>= 9),
                python-setuptools,
                python3-all,
                python3-setuptools,
-Build-Depends-Indep: python-httplib2 (>= 0.9.1),
+Build-Depends-Indep: python-crypto,
+                     python-cryptography (>= 1.0),
+                     python-django,
+                     python-flask,
+                     python-httplib2 (>= 0.9.1),
+                     python-keyring,
+                     python-mock (>= 1.3),
                      python-nose,
+                     python-openssl (>= 0.14),
                      python-pyasn1,
                      python-pyasn1-modules (>= 0.0.5),
                      python-rsa (>= 3.1.4),
                      python-six (>= 1.6.1),
+                     python-unittest2,
                      python-uritemplate,
+                     python-webtest,
+                     python3-crypto,
+                     python3-cryptography (>= 1.0),
+                     python3-django,
+                     python3-flask,
                      python3-httplib2 (>= 0.9.1),
+                     python3-keyring,
+                     python3-mock (>= 1.3),
                      python3-nose,
+                     python3-openssl (>= 0.14),
                      python3-pyasn1,
                      python3-pyasn1-modules (>= 0.0.5),
                      python3-rsa (>= 3.1.4),
                      python3-six (>= 1.6.1),
+                     python3-unittest2,
                      python3-uritemplate,
+                     python3-webtest,
 Standards-Version: 3.9.6
 Vcs-Browser: https://anonscm.debian.org/cgit/openstack/python-oauth2client.git
 Vcs-Git: https://alioth.debian.org/anonscm/git/openstack/python-oauth2client.git
