@@ -19,6 +19,15 @@ override_dh_auto_install:
 			--root $(CURDIR)/debian/python3-oauth2client; \
 	done
 
+override_dh_auto_test:
+ifeq (,$(findstring nocheck, $(DEB_BUILD_OPTIONS)))
+        @echo "===> Running tests"
+        set -e ; set -x ; for i in 2.7 $(PYTHON3S) ; do \
+		PYMAJOR=`echo $$i | cut -d'.' -f1` ; \
+		echo "===> Testing with python$$i (python$$PYMAJOR)" ; \
+		PYTHONPATH=$(CURDIR) python$$i -m nose --ignore-files=test_appengine\.py --ignore-files=test__appengine_ndb\.py ; \
+	done
+
 # Commands not to run
 override_dh_installcatalogs:
 override_dh_installemacsen override_dh_installifupdown:
